--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: './images/bg-picture.jpg';
 }
 
 .App-logo {
@@ -35,4 +36,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.title{
+  background-color: #a12312;
+}
+
+.base{
+  height: 100%;
+  width: 100%;
+}
+
+.link0, .link1, .link2, .menu0, .menu1, .menu2{
+  outline: none;
+  text-decoration: none;
+  color: white;
 }
