--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,6 +1,11 @@
-.items{
+.col{
     color:#f1f1f1;
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+}
+
+.detalles{
+    color:#f1f1f1;
+    font-size: 40px;
 }
