--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,3 +7,9 @@
   .title{
       color: #f1f1f1;
   }
+
+  .link0, .link1, .link2, .menu0, .menu1, .menu2{
+    outline: none;
+    text-decoration: none;
+    color: white;
+  }
